--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,9 @@
     ~/.config/starship.toml:
       create: true
       path: starship.toml
+    ~/.config/kitty/kitty.conf:
+      create: true
+      path: kitty.conf
 
 - create:
     - ~/Projects
