--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,9 @@
     ~/.config/htop/htoprc:
       create: true
       path: htoprc
+    ~/.config/mc/ini:
+      create: true
+      path: midnight-commander
     ~/.config/starship.toml:
       create: true
       path: starship.toml
