.zshrc and starship config updates

--- a/starship.toml
+++ b/starship.toml
@@ -1,2 +1,14 @@
 [java]
 symbol = "💩 "
+
+[[battery.display]]  # "bold red" style when capacity is between 0% and 10%
+threshold = 10
+style = "bold red"
+
+[[battery.display]]  # "bold yellow" style when capacity is between 10% and 30%
+threshold = 30
+style = "bold yellow"
+
+[[battery.display]]  # "bold green" style when capacity is between 30% and 100%
+threshold = 100
+style = "bold green"
