--- a/kitty.conf
+++ b/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family         JetBrainsMono Nerd Font Mono Regular
-bold_font           JetBrainsMono Nerd Font Mono Medium
-italic_font         JetBrainsMono Nerd Font Mono Italic
-bold_italic_font    JetBrainsMono Nerd Font Mono Medium Italic
+font_family         JetBrainsMono Nerd Font Regular
+bold_font           JetBrainsMono Nerd Font Medium
+italic_font         JetBrainsMono Nerd Font Italic
+bold_italic_font    JetBrainsMono Nerd Font Medium Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
