--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,6 +23,9 @@
     ~/.config/kitty/kitty.conf:
       create: true
       path: kitty.conf
+    ~/.config/karabiner/karabiner.json:
+      create: true
+      path: karabiner.json
     ~/.config/kitty/macos-launch-services-cmdline:
       create: true
       path: macos-launch-services-cmdline
