--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,9 @@
     ~/.zshrc: .zshrc
     ~/.gitconfig: .gitconfig
     ~/.wakatime.cfg: .wakatime.cfg
+    ~/.config/bat/config:
+      create: true
+      path: bat.config
     ~/.config/fish/config.fish:
       create: true
       path: config.fish
