--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,6 @@
 set -g default-terminal 'screen-256color'
+set -g status-interval 1
+set -g status-right-length 190
 setw -g mouse on
 
 bind h select-pane -L
@@ -20,12 +22,16 @@ bind l select-pane -R
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'odedlaz/tmux-onedark-theme'
-# set -g @plugin "arcticicestudio/nord-tmux"
+set -g @plugin 'tassaron/tmux-df'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'jdxcode/tmux-spotify-info'
+set -g @plugin 'xamut/tmux-spotify'
+set -g @plugin 'xamut/tmux-weather'
 
-set -g @onedark_widgets "#(cpu_percentage)"
-set -g @onedark_date_format '%Y.%m.%d'
+set -g @onedark_widgets " #{df_percent} #{cpu_fg_color} ﬙ #{cpu_percentage} #{ram_fg_color}  #{ram_percentage} #[fg=default] #{weather}"
+set -g @onedark_time_format '%H:%M:%S'
+set -g @onedark_date_format ' %Y.%m.%d'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
