--- a/tmux.conf
+++ b/tmux.conf
@@ -29,9 +29,9 @@ set -g @plugin 'jdxcode/tmux-spotify-info'
 set -g @plugin 'xamut/tmux-spotify'
 set -g @plugin 'xamut/tmux-weather'
 
-set -g @onedark_widgets " #{df_percent} #{cpu_fg_color} ﬙ #{cpu_percentage} #{ram_fg_color}  #{ram_percentage} #[fg=default] #{weather}"
+set -g @onedark_widgets "󰋊 #{df_percent} #{cpu_fg_color} 󰻠 #{cpu_percentage} #{ram_fg_color} 󰍛 #{ram_percentage} #[fg=default] #{weather}"
 set -g @onedark_time_format '%H:%M:%S'
-set -g @onedark_date_format ' %Y.%m.%d'
+set -g @onedark_date_format '󰃰 %Y.%m.%d'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
