--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -50,6 +50,15 @@
     ~/.warp/themes/one_dark.yaml:
       create: true
       path: ./warp themes/one_dark.yaml
+    ~/.warp/themes/tokyo_night_light.yml:
+      create: true
+      path: ./warp themes/tokyo_night_light.yml
+    ~/.warp/themes/tokyo_night_storm.yml:
+      create: true
+      path: ./warp themes/tokyo_night_storm.yml
+    ~/.warp/themes/tokyo_night.yml:
+      create: true
+      path: ./warp themes/tokyo_night.yml
 
 - create:
     - ~/Projects
