--- a/mc.ini
+++ b/mc.ini
@@ -82,13 +82,13 @@ editor_backup_extension=~
 editor_filesize_threshold=64M
 editor_stop_format_chars=-+*\\,.;:&>
 mcview_eof=
-skin=nicedark
+skin=modarin256-defbg
 shadows=true
 filepos_max_saved_entries=1024
 
 [Layout]
 output_lines=0
-left_panel_size=92
+left_panel_size=84
 top_panel_size=28
 message_visible=false
 keybar_visible=false
