--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,9 @@
     ~/.config/fish/config.fish:
       create: true
       path: config.fish
+    ~/.config/helix/config.toml:
+      create: true
+      path: helix.toml
     ~/.config/htop/htoprc:
       create: true
       path: htoprc.cfg
